<resources>
    <string name="app_name">QR Face Lock System</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Device Preferences -->
    <string name="add_new_header">Device Settings</string>
    <string name="add_new_btn_label">Add New Device (eg: Door)</string>
    <string name="delete_btn_label">Delete Device (eg: Door)</string>

    <!-- Account Preferences -->
    <string name="account_setting_header">Account Settings</string>
    <!--        Username Preferences-->
    <string name="user_name">Username</string>
    <string name="user_name_value">Username</string>
    <!--        Email Preferences-->
    <string name="email">Email Address</string>
    <string name="email_value">Email Address</string>
    <!--        Password Preferences-->
    <string name="password">Password</string>
    <string name="password_value">Change password</string>
    <!--        Phone Number Preferences-->
    <string name="phone">Phone Number</string>
    <string name="phone_value">Change Phone</string>
    <!--        Uid Preferences-->
    <string name="uid">User UID</string>
    <string name="uid_value">UID</string>

    <string name="sign_out_btn_label">Sign out</string>


    <!-- History Preferences -->
    <string name="history_header">Door History</string>
    <string name="history_btn_label">Lock / Unlock History</string>


    <!-- Preference Titles -->

    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <!--    <string name="facebook_app_id">938901216628417</string>-->
    <!--    <string name="fb_login_protocol_scheme">fb938901216628417</string>-->

</resources>